--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,7 +24,11 @@ repos:
     rev: v1.12.1
     hooks:
     -   id: blacken-docs
--   repo: https://github.com/PyCQA/flake8
-    rev: 4.0.1
+# -   repo: https://github.com/PyCQA/flake8
+#     rev: 4.0.1
+#     hooks:
+#     -   id: flake8
+-   repo: https://github.com/PyCQA/pylint
+    rev: v2.15.5
     hooks:
-    -   id: flake8
+    -   id: pylint
