--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -22,6 +22,11 @@ jobs:
           echo AWS_ACCOUNT=${{ secrets.AWS_ACCOUNT }} > .env
           echo AWS_REGION=${{ secrets.AWS_REGION }} > .env
 
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
       - name: Install python reqs
         run: |
           python3 -m pip install twine
