--- a/.github/workflows/test-py.yml
+++ b/.github/workflows/test-py.yml
@@ -19,6 +19,11 @@ jobs:
           echo AWS_ACCOUNT=${{ secrets.AWS_ACCOUNT }} > .env
           echo AWS_REGION=${{ secrets.AWS_REGION }} > .env
 
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
       - name: Setup python environment
         run: |
           make venv
