--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,6 +20,7 @@ repos:
     rev: v1.4.0
     hooks:
     -   id: detect-secrets
+        exclude: docs/
 -   repo: https://github.com/asottile/blacken-docs
     rev: v1.12.1
     hooks:
