--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -1,14 +1,8 @@
 name: Deploy python pacakage to PyPi
 
 on:
-  workflow_run:
-    workflows: ["Test python"]
-    branches: [ main ]
-    types:
-      - completed
-  push:
-    tags:
-      - beta-*
+  release:
+    types: [released]
 
 jobs:
   release:
@@ -19,11 +13,11 @@ jobs:
 
       - name: Populate .env with additional vars
         run: |
-          echo AWS_ACCOUNT=${{ secrets.AWS_ACCOUNT }} > .env
-          echo AWS_REGION=${{ secrets.AWS_REGION }} > .env
-          echo TWINE_USERNAME=${{ secrets.TWINE_USERNAME }} > .env
-          echo TWINE_PASSWORD=${{ secrets.TWINE_PASSWORD }} > .env
-          echo TWINE_NON_INTERACTIVE=${{ secrets.TWINE_NON_INTERACTIVE }} > .env
+          echo AWS_ACCOUNT=${{ secrets.AWS_ACCOUNT }} >> .env
+          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
+          echo TWINE_USERNAME=${{ secrets.TWINE_USERNAME }} >> .env
+          echo TWINE_PASSWORD=${{ secrets.TWINE_PASSWORD }} >> .env
+          echo TWINE_NON_INTERACTIVE=${{ secrets.TWINE_NON_INTERACTIVE }} >> .env
 
       - name: Install Python
         uses: actions/setup-python@v4
@@ -36,4 +30,4 @@ jobs:
 
       - name: Release
         run: |
-          make deploy/release
+          make deploy/pypi
