--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,4 +29,4 @@ repos:
     rev: v2.15.5
     hooks:
     -   id: pylint
-        exclude: docs/
+        exclude: (docs/|get_latest_release_changelog.py)
