--- a/.github/workflows/test-py.yml
+++ b/.github/workflows/test-py.yml
@@ -16,6 +16,7 @@ jobs:
 
       - name: Populate .env with additional vars
         run: |
+          cp ./.github/.github.env .env
           echo AWS_ACCOUNT=${{ secrets.AWS_ACCOUNT }} >> .env
           echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
           echo TWINE_USERNAME=${{ secrets.TWINE_USERNAME_TEST }} >> .env
