--- a/.github/workflows/test-py.yml
+++ b/.github/workflows/test-py.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   test:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -17,11 +17,11 @@ jobs:
       - name: Populate .env with additional vars
         run: |
           cp ./.github/.github.env .env
-          echo AWS_ACCOUNT=${{ secrets.AWS_ACCOUNT }} >> .env
-          echo AWS_REGION=${{ secrets.AWS_REGION }} >> .env
-          echo TWINE_USERNAME=${{ secrets.TWINE_USERNAME_TEST }} >> .env
-          echo TWINE_PASSWORD=${{ secrets.TWINE_PASSWORD_TEST }} >> .env
-          echo TWINE_NON_INTERACTIVE=${{ secrets.TWINE_NON_INTERACTIVE }} >> .env
+          echo "AWS_ACCOUNT=${{ secrets.AWS_ACCOUNT }}" >> .env
+          echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> .env
+          echo "TWINE_USERNAME=${{ secrets.TWINE_USERNAME_TEST }}" >> .env
+          echo "TWINE_PASSWORD=${{ secrets.TWINE_PASSWORD_TEST }}" >> .env
+          echo "TWINE_NON_INTERACTIVE=${{ secrets.TWINE_NON_INTERACTIVE }}" >> .env
 
       - name: Install Python
         uses: actions/setup-python@v4
