--- a/.github/workflows/test-py.yml
+++ b/.github/workflows/test-py.yml
@@ -9,14 +9,13 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
       - name: Populate .env with additional vars
         run: |
-          cp ./.github/.github.env .env
           echo "AWS_ACCOUNT=${{ secrets.AWS_ACCOUNT }}" >> .env
           echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> .env
           echo "TWINE_USERNAME=${{ secrets.TWINE_USERNAME_TEST }}" >> .env
