--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -17,7 +17,7 @@ jobs:
           echo "AWS_REGION=${{ secrets.AWS_REGION }}" >> .env
           echo "TWINE_USERNAME=${{ secrets.TWINE_USERNAME }}" >> .env
           echo "TWINE_PASSWORD=${{ secrets.TWINE_PASSWORD }}" >> .env
-          echo "TWINE_NON_INTERACTIVE=${{ secrets.TWINE_NON_INTERACTIVE }}" >> .env
+          echo TWINE_NON_INTERACTIVE=${{ secrets.TWINE_NON_INTERACTIVE }} >> .env
 
       - name: Install Python
         uses: actions/setup-python@v4
